syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarChangeCostumeReq {
	uint64 avatar_guid = 6;
	uint32 costume_id = 4;
}