syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarChangeCostumeRsp {
	uint64 avatar_guid = 4;
	int32 retcode = 15;
	uint32 costume_id = 10;
}