syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarChangeTraceEffectReq {
	uint64 avatar_guid = 8;
	uint32 trace_effect_id = 4;
}