syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarWearFlycloakRsp {
	repeated uint64 avatar_guid_list = 13;
	int32 retcode = 14;
	uint32 flycloak_id = 5;
}